syntax = "proto3";

package catalog;
option go_package = "./protobuf;protobuf";

//import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";

message User{
  string email = 1;
  string tdid = 2;
}

message UsersItem{
  repeated UserItem users = 1;
}

message UserItem{
  string email = 1;
  string tdid = 2;
  string name = 3;
  string login = 4;
  string avatar = 5;
}

message UserTdids{
  repeated string tdid = 1;
}

service Users {
  rpc GetUserTdid(User) returns (User){}
  rpc GetUsersFromTdid(UserTdids) returns (UsersItem){}
}

